# maven-pom-xref-util

./: .gitignore  PomParser.py  README.md  check-maven-pom-xref-file-system.py  check-maven-pom-xref-github.py  pyproject.toml
src/: PomParser.py  check-maven-pom-xref-file-system.py  check-maven-pom-xref-github.py
src/pom_xref_util/: pom-xref-file-system.py  pom-xref-github.py
src/pom_xref_util/modules/output_handler/: __init__.py  htmlwriter.py
src/pom_xref_util/modules/pom_parser/: __init__.py  pomparser.py
src/pom_xref_util/utils/: constants.py
tests/: TestPomParser.py  sample.xml
