[project]
name = "maven-pom-xref-util"
version = "0.0.1"
authors = [
  { name="pcarson" },
]
description = "XRef libraries used in maven based projects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pcarson/maven-pom-xref-util"
